# pyxidraw

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BENCH_REPORT_CHECKLIST.md  CHECKLIST_cc_gui_midi_sync.md  CHECKLIST_esc_close_crash.md  CHECKLIST_refactor_draw_global_cc.md  CLAUDE.md  CLEANUP_PLAN.md  CODE_READABILITY_AUDIT_2025-09-08.md  CODE_REVIEW_2025-09-07.md  CODE_REVIEW_overall_2025-09-20.md  CODE_REVIEW_src_2025-09-20.md  ENUM_parameters_candidates.md  EXTRUDE_ZERO_DIRECTION_CHECKLIST.md  IMPLEMENTATION_REFACTOR_PLAN.md  IMPROVEMENT_dpg_window_plan.md  IMPROVEMENT_offset_effect.md  IMPROVEMENT_offset_perf.md  IMPROVEMENT_parameters_enum_gui.md  IMPROVEMENT_parameters_gui_dpg.md  IMPROVEMENT_parameters_gui_dpg_FEATURE_CHECKLIST.md  IMPROVEMENT_parameters_gui_polish.md  IMPROVEMENT_unify_enum_choices.md  IMPROVE_run_sketch_user_draw_typing.md  PROPOSAL_BREAKING_CHANGES.md  READABILITY_AUDIT_2025-09-08.md  README.md  REPO_CLEANUP_CHECKLIST.md  TEST_HARDENING_PLAN.md  TEST_PLAN.md  TODO.txt  all_effects.py  all_shapes.py  architecture.md  build_artifacts_cleanup_plan.md  cc_range_mapping_plan.md  code_review.md  config.yaml  config_parameter_analysis.md  (+88 more)
api/: __init__.py  __init__.pyi  effect_chain.py  effect_pipeline.py  effects.py  pipeline.py  runner.py  shape_factory.py  shape_registry.py  shapes.py
benchmarks/: __main__.py  benchmark_result_manager.py  benchmark_visualizer.py  effects.py  shapes.py
common/: base_registry.py  cacheable_base.py  logging.py  param_utils.py  types.py
configs/: default.yaml  example.yaml
demo/: 01.py  define_your_effect.py  define_your_shape.py  effect_grid.py  shape_grid.py
docs/: 251110_draw_return_warning_plan.md  CHANGELOG.md  aa_stepwise_plan.md  affine_pivot_api_change_plan.md  api_audit_2025-09-05.md  api_naming_renames.md  architecture.md  architecture_audit_2025-11-07.md  architecture_consistency_report.md  benchmarks.md  benchmarks_parallel_guide.md  bugfix_plan_parameter_gui_none.md  code_review_2025-09-04.md  code_review_2025-09-15.md  code_review_src_2025-09-29.md  collapse_effect_equivalence_check.md  collapse_effect_optimization_v2.md  commit-docstring-autogen.md  dash_effect_offset_plan.md  dash_effect_optimization.md  dash_effect_pattern_plan.md  dash_effect_perf_plan.md  dash_effect_refactor_plan.md  dash_effect_zero_length_bug_plan.md  dev-setup.md  dir_structure_review_2025-09-14.md  documentation_strategy.md  effect_catalog_script_spec.md  effect_tuning_checklist.md  effects-api-unification-checklist.md  effects.md  effects_arguments.md  effects_cheatsheet.md  effects_consistency_review_2025-09-29.md  environment_variables.md  export_image_spec.md  export_video_spec.md  extrude_effect_numba_optimization.md  fill_effect_numba_optimization.md  fill_numba_kernel_api.md  (+67 more)
effects/: __init__.py  affine.py  array.py  base.py  boldify.py  buffer.py  collapse.py  connect.py  culling.py  dash.py  dashify.py  desolve.py  displace.py  explode.py  extrude.py  fill.py  filling.py  noise.py  offset.py  pipeline.py  registry.py  repeat.py  ripple.py  rotate.py  rotation.py  scale.py  scaling.py  subdivide.py  subdivision.py  sweep.py  transform.py  translate.py  translation.py  trim.py  trimming.py  twist.py  wave.py  weave.py  webify.py  wobble.py
engine/: __init__.py
new_tests/: run_unified_geometry_check.py  test_effects_functions_fill_array.py  test_translation_geometry_path.py
plans/: 001-remove-public-api-normalization.md
reports/: agents_audit_2025-10-07.md  agents_audit_2025-10-17.md  hud_color_gui_plan.md  parameter_gui_japanese_support_plan.md  parameter_gui_refactor_plan.md  phase0_lazy_import_inventory.md  plan_dpg_window_restore.md  plan_lazy_import_alignment.md  plan_lazy_import_simplification.md  plan_swapbuffer_identifier_rename.md  refactoring_gui_color_plan.md  src_modules_review_2025-10-10.md
reviews/: fill_effect_review.md
scripts/: __init__.py  bench_geometry_digest.py  convert_pickle_assets.py  convert_polyhedron_pickle_to_npz.py  gen_g_stubs.py  rename_effects_in_specs.py  run_unified_geometry_check.py  snapshot_effects_grid.py  tune_affine.py  tune_collapse.py  tune_dash.py  tune_displace.py  tune_explode.py  tune_extrude.py  tune_fill.py  tune_offset.py  tune_repeat.py  tune_ripple.py  tune_trim.py  tune_twist.py  tune_weave.py  tune_wobble.py
shapes/: asemic_glyph.py  attractor.py  base.py  capsule.py  cone.py  cylinder.py  grid.py  lissajous.py  polygon.py  polyhedron.py  registry.py  sphere.py  text.py  torus.py
sketch/: 251022.py  251027.py  251027_2.py  251101.py  251107.py  251109.py  251109_2.py  251110.py  251111.py  251113.py  251114.py  251115.py  251116.py  251117.py  251118.py  251119.py  251120.py  251129.py  251202.py  251202_1.py  251203.py
tests/: __init__.py  conftest.py  test_api_effects.py  test_api_surface.py  test_architecture.py  test_array.py  test_benchmarks_serializable_targets_smoke.py  test_buffer.py  test_effect_fill_nonplanar_skip.py  (+45 more)
(+693 files in other folders)
